2017-04-01
  commit version 1.0.0. Supports MPI, openmp. Passed Valgrind memory test for simple cases.
  TODO: implement output POVRay object.
2017-04-06
  remove POVRay functions and finish document.  Now devote all the time of the correct Fourier transform.
2017-04-22
  Optimize memory usage. Updated to 1.0.1
2017-04-26
  Add ellipse and polygon pattern to 2D object
2017-05-02
  Add non-orthogonal lattice, and circular truncation of G.
2017-06-15
  Fixed the bug of JJ correlation